--- a/Oceana/Packages/manifest.json
+++ b/Oceana/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.collab-proxy": "2.4.4",
     "com.unity.ide.rider": "3.0.28",
     "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.recorder": "5.0.0",
     "com.unity.render-pipelines.universal": "16.0.5",
     "com.unity.test-framework": "1.3.9",
     "com.unity.timeline": "1.8.6",
